src/snapshots/labtui__labtui__tests__app_loading.snap
---
source: src/labtui.rs
expression: terminal.backend()
---
"  Status [1]  |  Log [2]  |  Files [3]  |  Stashing [4]  |  Stashes [5]  |  MRs [6]  |  I "
" ──────────────────────────────────────────────────────────────────────────────────────── "
"┌Unstaged Changes───────────────────────────┐┌Diff: ─────────────────────────────────────┐"
"│Loading ...                                ││                                           │"
"│                                           ││                                           │"
"│                                           ││                                           │"
"└───────────────────────────────────{master}┘│                                           │"
"┌Staged Changes─────────────────────────────┐│                                           │"
"│Loading ...                                ││                                           │"
"│                                           ││                                           │"
"└───────────────────────────────────────────┘└───────────────────────────────────────────┘"
"                                                                                          "
